--- a/0x00-semantic_html/1-index.html
+++ b/0x00-semantic_html/1-index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Semantic Html Blog Post</title>
     
-    <meta name="description" content="A blog post about semantic HTML and accessibility practises" />
+    <meta name="description" content="A blog post about semantic HTML and accessibility practices" />
     <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO" />
     <meta name="author" content="Your Name" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
